# laser_cam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TASKS.md  backFootPart-1.dxf  sample.dxf  sample_sheet.gcode  sample_with_text.dxf
src/: gcode.rs  laser.rs  main.rs  model.rs  sheet.rs  utils.rs
