[package]
name = "laser_cam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dxf = "0.6.0"
geo = "0.29.3"
iced = { version = "0.13.1", features = ["canvas"] }
iced_graphics = { version = "0.13.0", features = ["geometry"] }
ultraviolet = { version = "0.9.2", features = ["f64"] }
