[package]
name = "laser_cam"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/Clinery1/laser_cam"
license = "MIT"
keywords = ["laser", "CAM", "GUI"]
authors = ["Christopher Nguyen (Clinery1)"]

[dependencies]
anyhow = "1.0.95"
directories = "6.0.0"
dxf = "0.6.0"
geo = "0.29.3"
iced = { version = "0.13.1", features = ["advanced", "canvas", "multi-window"] }
iced_graphics = { version = "0.13.0", features = ["geometry"] }
indexmap = { version = "2.7.1", features = ["serde"] }
rfd = "0.15.2"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
smallvec = "1.13.2"
time = { version = "0.3.37", features = ["local-offset"] }
ultraviolet = { version = "0.9.2", features = ["f64"] }
